# esp32_heating

./: readme.md
esp32_heating/: .cproject  CMakeLists.txt  Makefile  README.md  example_test.py  sdkconfig  sdkconfig.old
esp32_heating/components/PIDv1/: CMakeLists.txt  PIDv1.cpp  PIDv1.h
esp32_heating/components/u8g2/: CMakeLists.txt
esp32_heating/components/u8g2/inc/: u8g2.h
esp32_heating/components/u8g2/src/: u8g2_d_setup.c
esp32_heating/main/: CMakeLists.txt  app_main.cpp  heating.h
esp32_heating/main/adc/: adc.h  adc_task.cpp
esp32_heating/main/beep/: beep.cpp  beep.h
esp32_heating/main/event/: event.cpp  event.h
esp32_heating/main/logic/: logic.h  logic_task.cpp  pidCtl.cpp
esp32_heating/main/max6675/: max6675.cpp  max6675.h
esp32_heating/main/nvs/: nvs.cpp  nvs.h
esp32_heating/main/oled/: oled.cpp  oled.h
esp32_heating/main/pwm/: pwm.cpp  pwm.h
esp32_heating/main/render/: ExternDraw.cpp  ExternDraw.h  bitmap.cpp  bitmap.h  menuexpand.cpp  menuexpand.h  menuobj.cpp  menuobj.h  render.h  render_main.cpp  render_menu.cpp  render_screensavers.cpp  render_task.cpp  render_task.h
esp32_heating/main/rotary/: OneButton.cpp  OneButton.h  rotary.cpp  rotary.h
esp32_heating/main/shell/: shell.h  shell_task.cpp
esp32_heating/main/t12/: t12.cpp  t12.h
esp32_heating/main/tools/: mathFun.cpp  mathFun.h  ntc.cpp  ntc.h
esp32_heating/main/ws2812/: ws2812.cpp  ws2812.h
solidworks/: 前后面板.DXF  前后面板.SLDPRT
